--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6.1
+install_requires =
+    requests
 
 [options.packages.find]
 exclude =
